Fix placement of list-add button (shouldn't be in the page title, especially not on component tabs), make sure it's above the filter form on mobile

--- a/static/themes/Kashmir/style.css
+++ b/static/themes/Kashmir/style.css
@@ -597,17 +597,12 @@ table.dataTable .selected-action {
 
 #list-btn-add {
   float: right;
-  margin-top: 1.0rem;
   margin-right: 1.0rem;
 }
 
 /* Summary tabs */
 .ui-tabs .ui-tabs-panel {
   padding: 0.5em;
-}
-
-#summary-common #list-btn-add {
-  margin-top: -2.5rem;
 }
 
 #summary-tabs {
